--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="sass/main.css" />
-    <!-- <link rel="stylesheet" href="css/style.css" /> -->
+    <!-- <link rel="stylesheet" href="sass/main.css" /> -->
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Some Title</title>
   </head>
@@ -19,17 +19,21 @@
       <header class="header"></header>
       <main class="content">
         <div class="left">
-          <div class="details">
-            <!-- <div class="row"> -->
-
-            <div class="date">
+          <div class="column">
+            <div class="column__date">
               <div>July 2019</div>
             </div>
-            <div class="circle">&nbsp;</div>
 
-            <div class="card">
-              <h3 class="heading">Tile sample lorem ipsum dolor sit amet</h3>
-              <p class="paragraph">
+            <div class="column__figure">
+              <div class="column__figure__circle"></div>
+              <div class="column__figure__divider"></div>
+            </div>
+
+            <div class="column__card">
+              <h3 class="column__card__heading">
+                Tile sample lorem ipsum dolor sit amet
+              </h3>
+              <p class="column__card__paragraph">
                 lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem
                 ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
                 dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit
@@ -37,20 +41,25 @@
                 ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
                 dolor sit amet
               </p>
-              <div class="box">&nbsp;</div>
+              <div class="column__card__box"></div>
             </div>
           </div>
-          <div class="details">
-            <!-- <div class="row"> -->
 
-            <div class="date">
+          <div class="column">
+            <div class="column__date">
               <div>July 2019</div>
             </div>
-            <div class="circle">&nbsp;</div>
 
-            <div class="card">
-              <h3 class="heading">Tile sample lorem ipsum dolor sit amet</h3>
-              <p class="paragraph">
+            <div class="column__figure">
+              <div class="column__figure__circle"></div>
+              <div class="column__figure__divider"></div>
+            </div>
+
+            <div class="column__card">
+              <h3 class="column__card__heading">
+                Tile sample lorem ipsum dolor sit amet
+              </h3>
+              <p class="column__card__paragraph">
                 lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem
                 ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
                 dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit
@@ -58,20 +67,24 @@
                 ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
                 dolor sit amet
               </p>
-              <div class="box">&nbsp;</div>
+              <div class="column__card__box"></div>
             </div>
           </div>
-          <div class="details">
-            <!-- <div class="row"> -->
 
-            <div class="date">
+          <div class="column">
+            <div class="column__date">
               <div>July 2019</div>
             </div>
-            <div class="circle">&nbsp;</div>
 
-            <div class="card">
-              <h3 class="heading">Tile sample lorem ipsum dolor sit amet</h3>
-              <p class="paragraph">
+            <div class="column__figure">
+              <div class="column__figure__circle"></div>
+            </div>
+
+            <div class="column__card">
+              <h3 class="column__card__heading">
+                Tile sample lorem ipsum dolor sit amet
+              </h3>
+              <p class="column__card__paragraph">
                 lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem
                 ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
                 dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit
@@ -81,65 +94,8 @@
               </p>
             </div>
           </div>
-          <!-- </div> -->
-          <!-- <div class="details">
-            <div class="row">
-              <div class="column">
-                <div class="combined">
-                  <span class="date">July 2019</span>
-                  <div class="circle">&nbsp;</div>
-                  <h3 class="heading">
-                    Tile sample lorem ipsum dolor sit amet
-                  </h3>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="column">
-                <p class="paragraph">
-                  lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem
-                  ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
-                  dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor
-                  sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-                  lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem
-                  ipsum dolor sit amet
-                </p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="column">
-                <div class="box">&nbsp;</div>
-              </div>
-            </div>
-          </div>
-          <div class="details">
-            <div class="row">
-              <div class="column">
-                <div class="combined">
-                  <span class="date">July 2019</span>
-                  <div class="circle">&nbsp;</div>
-                  <h3 class="heading">
-                    Tile sample lorem ipsum dolor sit amet
-                  </h3>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="column">
-                <p class="paragraph">
-                  lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem
-                  ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum
-                  dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor
-                  sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet
-                  lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem
-                  ipsum dolor sit amet
-                </p>
-              </div>
-            </div>
-          </div> -->
         </div>
+
         <div class="right"></div>
       </main>
     </div>
